# MLOps-Fraud-Detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  dvc.yaml  projectflow.txt  pyproject.toml  requirements.txt  setup.py  test_environment.py
.dvc/: config
.github/workflows/: ci-train.yaml
app/: app.py
configs/contracts/: runtime_required.yaml
configs/environments/: base.yaml  dev.yaml  prd.yaml  uat.yaml
configs/schemas/: insurance_fraud.yaml
data/interim/: test_processed.csv  train_processed.csv
data/processed/: test_features.csv  train_features.csv
data/raw/: test.csv  train.csv
models/: feature_manifest.json  label_encoder.pkl  model.pkl  model_training_summary.json
notebooks/: data.csv  exp.ipynb
reports/: drift_report.json  evaluation_diagnostics.json  experiment_model_info.json  metrics.json  model_registration.json  report.yaml  retrain_signal.json
src/core/: config_lint.py  exceptions.py  io.py  logger.py  s3.py  settings.py  transformers.py
src/data/: data_ingestion.py  data_validation.py  ingestion.py  preprocessing.py  transformation.py  validation.py
src/drift_detection/: __init__.py  common.py  concept_drift.py  data_drift.py  model_drift.py  run.py
src/feature/: feature_engineering.py
src/model/: model_building.py  model_evaluation.py  model_promotion.py  register_model.py
tests/: conftest.py
tests/integration/: test_fastapi_predict.py
tests/performance/: test_predict_latency.py
tests/smoke/: test_entrypoints.py
tests/unit/: test_config_lint.py  test_drift_detection.py
